<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kuggle</string>
	<string name="app_id">1041611249197520</string>
	
    <string name="str_login_facebook">LOG IN WITH FACEBOOK</string>
    <string name="str_login_phone">SIGN UP WITH PHONE NUMBER</string>
    <string name="str_already_account">ALREADY HAVE AN ACCOUNT? SIGN IN</string>
    <string name="str_what_is_phone">What is your mobile phone number?</string>
    <string name="str_phone_number">PHONE NUMBER</string>
    <string name="str_dont_kuggle_account">If you don\’t have a Kuggle account,</string>
    <string name="str_get_setup">we\’ll get one set up.</string>
	<string name="str_dont_share_number">We don\’t share you phone number,</string>
	<string name="str_only_use_it">we only use it for identification purposes.</string>
	<string name="str_next">NEXT</string>
	<string name="str_new_kuggle">Seems like you are new to Kuggle.</string>
	<string name="str_pin_sms">PIN FROM SMS</string>
	<string name="str_verify_number">Verify your mobile Phone number.</string>
	<string name="str_enter_pin">Please enter the PIN you received in sms.</string>
    <string name="str_glad_back">Glad to have you back!</string>
    <string name="str_lets_get">Let\’s get acquainted</string>
    <string name="str_your_name">YOUR NAME</string>
    <string name="str_gender">GENDER</string>
    <string name="str_birth_date">BIRTH DATE</string>
    <string name="str_start_kuggle">START USING KUGGLE</string>
    <string name="str_select_gender">SELECT YOUR GENDER</string>
    <string name="str_select_birthday">SELECT YOUR BIRTHDAY</string>
    <string name="str_done">DONE</string>
    <string name="str_menu">Menu</string>
    <string name="str_watch_ad">Watch Ad</string>
    <string name="str_hi">Hi</string>
    <string name="str_thanks_for">Thanks for Sign Up.</string>
    <string name="str_will_launch">We will launch in your area as soon as</string>
    <string name="str_reach_our">we reach our sign-up goal.</string>
    <string name="str_help_us">Help us to launch sooner!</string>
    <string name="str_help_us_launch">Help us launch Kuggle in your area!</string>
    <string name="str_invite_special_gift">Invite 5 friends and earn a special gift!</string>
    <string name="str_invite_friends">INVITE FRIENDS</string>
    <string name="str_close">Close</string>
    <string name="str_my_purpose">My Purpose</string>
    <string name="str_purchases">Purchases</string>
    <string name="str_find_place">Find a Place</string>
    <string name="str_preferences">Preferences</string>
    <string name="str_spend_my">Spend my</string>
    <string name="str_share_kuggle">Share Kuggle</string>
    <string name="str_help">Help</string>
    <string name="str_age_filter">Age Filter</string>
    <string name="str_notification_settings">Notification Settings</string>
    <string name="str_notification">Notification</string>
    <string name="str_new_message">New Message</string>
    <string name="str_new_like">New Like</string>
    <string name="str_special_deals">Special Deals</string>
    <string name="str_vibrate">Vibrate</string>
    <string name="str_log_out">LOG OUT</string>
    <string name="str_tutorial">Tutorial</string>
    <string name="str_terms_service">Terms of Service</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_contact_us">Contact Us</string>
    <string name="str_invite_content">Help me launch Kuggle in my area! http://kuggle.me/bfadea1d63</string>
    
    <string name="str_error_sending_pin">Error sending PIN</string>
    <string name="str_phone_number_invalid">Phone number is not valid</string>
    <string name="str_alert_ok">AlertOK</string>
    <string name="str_pin_error">PIN verification error</string>
    <string name="str_pin_is_invalid">PIN is not valid</string>
    <string name="str_all_fields_required">All fields are required.</string>
    <string name="str_error_facebook_title">Error login with Facebook</string>
    <string name="str_error_facebook_content">Login with Facebook is failed.</string>
    <string name="str_error_info_title">Error sending Info.</string>
    <string name="str_error_info_content">Info is not valid.</string>
    <string name="str_error_network_title">Network Error.</string>
    <string name="str_error_network_content">Network is disconnected.</string>
    <string name="str_error_login_title">Login Error.</string>
    <string name="str_error_login_content">Login to Kuggle is failed.</string>
    
    <string name="err_unknown">The application has encountered unknown error while communicating with server.</string>
    <string name="err_no_internet">The application was unable to connect to server due to lack of internet connectivity.</string>     
    <string name="err_io">There was input/output error while connecting to server.</string>
    <string name="err_timeout">Slow internet connection resulted in connection timeout, try again.</string>
    <string name="err_protocol">There was an error with network protocol, please try later.</string>
    <string name="err_uri">The resource located on server was not found.</string>
    
    
</resources>
